istio/strict-peer-authentication-httpbin.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "httpbin"
  namespace: "east"
spec:
  selector:
    matchLabels:
      app: httpbin
  mtls:
    mode: STRICT
